fix: change yellow color to silver color in the 2nd hypothesis

--- a/classifier.ipynb
+++ b/classifier.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/pasha/image_classification/.venv/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -24,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -640,17 +648,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "t-test: Statistic = -4.323031800618086, p-value = 1.5942022503512946e-05\n",
-      "ANOVA: Statistic = 2.55966874289979, p-value = 0.10963753760234325\n",
-      "Mann-Whitney: Statistic = 9311421.5, p-value = 0.14445379875910133\n",
-      "Гипотеза не подтверждена: наличие картона не связано c серебряным цветом.\n"
+     "ename": "NameError",
+     "evalue": "name 'other_yellow_amounts' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[8], line 23\u001b[0m\n\u001b[1;32m     19\u001b[0m     other_silver_amounts\u001b[38;5;241m.\u001b[39mextend([calculate_silver_amount(img) \u001b[38;5;28;01mfor\u001b[39;00m img \u001b[38;5;129;01min\u001b[39;00m other_images])\n\u001b[1;32m     21\u001b[0m \u001b[38;5;66;03m# Проверка гипотез\u001b[39;00m\n\u001b[1;32m     22\u001b[0m \u001b[38;5;66;03m# 1. t-критерий Стьюдента\u001b[39;00m\n\u001b[0;32m---> 23\u001b[0m t_stat, t_pvalue \u001b[38;5;241m=\u001b[39m ttest_ind(metal_silver_amounts, \u001b[43mother_yellow_amounts\u001b[49m, equal_var\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[1;32m     25\u001b[0m \u001b[38;5;66;03m# 2. ANOVA\u001b[39;00m\n\u001b[1;32m     26\u001b[0m anova_stat, anova_pvalue \u001b[38;5;241m=\u001b[39m f_oneway(metal_silver_amounts, other_silver_amounts)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'other_yellow_amounts' is not defined"
      ]
     }
    ],
@@ -668,22 +677,22 @@
     "    return images\n",
     "\n",
     "metal_images = load_images_from_folder(metal_path)\n",
-    "metal_silver_amounts = [calculate_yellow_amount(img) for img in metal_images]\n",
+    "metal_silver_amounts = [calculate_silver_amount(img) for img in metal_images]\n",
     "\n",
-    "other_yellow_amounts = []\n",
+    "other_silver_amounts = []\n",
     "for other_path in other_paths:\n",
     "    other_images = load_images_from_folder(other_path)\n",
-    "    other_yellow_amounts.extend([calculate_yellow_amount(img) for img in other_images])\n",
+    "    other_silver_amounts.extend([calculate_silver_amount(img) for img in other_images])\n",
     "\n",
     "# Проверка гипотез\n",
     "# 1. t-критерий Стьюдента\n",
-    "t_stat, t_pvalue = ttest_ind(metal_silver_amounts, other_yellow_amounts, equal_var=False)\n",
+    "t_stat, t_pvalue = ttest_ind(metal_silver_amounts, other_silver_amounts, equal_var=False)\n",
     "\n",
     "# 2. ANOVA\n",
-    "anova_stat, anova_pvalue = f_oneway(metal_silver_amounts, other_yellow_amounts)\n",
+    "anova_stat, anova_pvalue = f_oneway(metal_silver_amounts, other_silver_amounts)\n",
     "\n",
     "# 3. Критерий Манна-Уитни\n",
-    "mann_stat, mann_pvalue = mannwhitneyu(metal_silver_amounts, other_yellow_amounts, alternative='two-sided')\n",
+    "mann_stat, mann_pvalue = mannwhitneyu(metal_silver_amounts, other_silver_amounts, alternative='two-sided')\n",
     "\n",
     "results = {\n",
     "    \"t-test\": {\"statistic\": t_stat, \"p-value\": t_pvalue},\n",
@@ -700,7 +709,7 @@
     "if all(hypothesis_results.values()):\n",
     "    print(\"Гипотеза подтверждена: наличие металла связано c серебряным цветом.\")\n",
     "else:\n",
-    "    print(\"Гипотеза не подтверждена: наличие картона не связано c серебряным цветом.\")"
+    "    print(\"Гипотеза не подтверждена: наличие металла не связано c серебряным цветом.\")"
    ]
   }
  ],
