feat: prove the 3rd hypothesis

--- a/classifier.ipynb
+++ b/classifier.ipynb
@@ -2,17 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/pasha/image_classification/.venv/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -32,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +42,7 @@
     "import pandas as pd\n",
     "import warnings\n",
     "\n",
-    "from scipy.stats import ttest_ind, f_oneway, mannwhitneyu\n",
+    "from scipy.stats import ttest_ind, f_oneway, mannwhitneyu, chi2_contingency\n",
     "from skimage.feature import graycomatrix, graycoprops\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
@@ -648,18 +640,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'other_yellow_amounts' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[8], line 23\u001b[0m\n\u001b[1;32m     19\u001b[0m     other_silver_amounts\u001b[38;5;241m.\u001b[39mextend([calculate_silver_amount(img) \u001b[38;5;28;01mfor\u001b[39;00m img \u001b[38;5;129;01min\u001b[39;00m other_images])\n\u001b[1;32m     21\u001b[0m \u001b[38;5;66;03m# Проверка гипотез\u001b[39;00m\n\u001b[1;32m     22\u001b[0m \u001b[38;5;66;03m# 1. t-критерий Стьюдента\u001b[39;00m\n\u001b[0;32m---> 23\u001b[0m t_stat, t_pvalue \u001b[38;5;241m=\u001b[39m ttest_ind(metal_silver_amounts, \u001b[43mother_yellow_amounts\u001b[49m, equal_var\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[1;32m     25\u001b[0m \u001b[38;5;66;03m# 2. ANOVA\u001b[39;00m\n\u001b[1;32m     26\u001b[0m anova_stat, anova_pvalue \u001b[38;5;241m=\u001b[39m f_oneway(metal_silver_amounts, other_silver_amounts)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'other_yellow_amounts' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "t-test: Statistic = -2.284424004913432, p-value = 0.022401779559765453\n",
+      "ANOVA: Statistic = 0.5733189930562239, p-value = 0.448952071385762\n",
+      "Mann-Whitney: Statistic = 10996543.5, p-value = 5.262970510833023e-16\n",
+      "Гипотеза не подтверждена: наличие металла не связано c серебряным цветом.\n"
      ]
     }
    ],
@@ -710,6 +701,89 @@
     "    print(\"Гипотеза подтверждена: наличие металла связано c серебряным цветом.\")\n",
     "else:\n",
     "    print(\"Гипотеза не подтверждена: наличие металла не связано c серебряным цветом.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Гипотеза №3 На картинках с картоном присутствует множество параллельных линий.\n",
+    "\n",
+    "- Способы проверки\n",
+    "    - **t-критерий Стьюдента (t-test)**: Сравнение средней доли параллельных линий в картинках с картоном и другими классами.\n",
+    "    - **ANOVA (дисперсионный анализ)**: Проверка, есть ли значимые различия между группами (картон и другие классы) по количеству параллельных линий.\n",
+    "    - **Критерий хи-квадрат**: Проверка гипотезы об отличии доли изображений с высокими количествами параллельных линий между картоном и другими классами."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "t-test: Statistic = -11.379057124078555, p-value = 1.9776123451846287e-29\n",
+      "ANOVA: Statistic = 52.405427227996164, p-value = 4.680228101392663e-13\n",
+      "Chi-square: Statistic = 19.34257889433447, p-value = 1.0924297310604447e-05\n",
+      "Гипотеза подтверждена: изображения c картоном имеют больше параллельных линий.\n"
+     ]
+    }
+   ],
+   "source": [
+    "cardboard_path = os.path.join(path + \"/garbage-dataset\", \"cardboard\")\n",
+    "other_paths = [os.path.join(path + \"/garbage-dataset\", cls) for cls in classes if cls != \"cardboard\"]\n",
+    "\n",
+    "def load_images_from_folder(folder):\n",
+    "    images = []\n",
+    "    for filename in os.listdir(folder):\n",
+    "        filepath = os.path.join(folder, filename)\n",
+    "        image = cv2.imread(filepath)\n",
+    "        if image is not None:\n",
+    "            images.append(image)\n",
+    "    return images\n",
+    "\n",
+    "cardboard_images = load_images_from_folder(cardboard_path)\n",
+    "cardboard_features = [calculate_parallel_lines(img) for img in cardboard_images]\n",
+    "\n",
+    "other_features = []\n",
+    "for other_path in other_paths:\n",
+    "    other_images = load_images_from_folder(other_path)\n",
+    "    other_features.extend([calculate_parallel_lines(img) for img in other_images])\n",
+    "\n",
+    "# Проверка гипотез\n",
+    "# 1. t-критерий Стьюдента\n",
+    "t_stat, t_pvalue = ttest_ind(cardboard_features, other_features, equal_var=False)\n",
+    "\n",
+    "# 2. ANOVA\n",
+    "anova_stat, anova_pvalue = f_oneway(cardboard_features, other_features)\n",
+    "\n",
+    "# 3. Критерий хи-квадрат\n",
+    "threshold = np.percentile(cardboard_features, 75) \n",
+    "cardboard_high = sum(x >= threshold for x in cardboard_features)\n",
+    "cardboard_low = len(cardboard_features) - cardboard_high\n",
+    "other_high = sum(x >= threshold for x in other_features)\n",
+    "other_low = len(other_features) - other_high\n",
+    "chi2_stat, chi2_pvalue, _, _ = chi2_contingency([[cardboard_high, cardboard_low], [other_high, other_low]])\n",
+    "\n",
+    "results = {\n",
+    "    \"t-test\": {\"statistic\": t_stat, \"p-value\": t_pvalue},\n",
+    "    \"ANOVA\": {\"statistic\": anova_stat, \"p-value\": anova_pvalue},\n",
+    "    \"Chi-square\": {\"statistic\": chi2_stat, \"p-value\": chi2_pvalue},\n",
+    "}\n",
+    "\n",
+    "for test, result in results.items():\n",
+    "    print(f\"{test}: Statistic = {result['statistic']}, p-value = {result['p-value']}\")\n",
+    "\n",
+    "# Итоговая проверка гипотезы\n",
+    "alpha = 0.05\n",
+    "hypothesis_results = {test: result['p-value'] < alpha for test, result in results.items()}\n",
+    "\n",
+    "if all(hypothesis_results.values()):\n",
+    "    print(\"Гипотеза подтверждена: изображения c картоном имеют больше параллельных линий.\")\n",
+    "else:\n",
+    "    print(\"Гипотеза не подтверждена: изображения c картоном не имеют значительно больше параллельных линий.\")\n"
    ]
   }
  ],
