--- a/classifier.ipynb
+++ b/classifier.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/pasha/image_classification/.venv/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -24,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +50,9 @@
     "import pandas as pd\n",
     "import warnings\n",
     "\n",
-    "from scipy.stats import ttest_ind, f_oneway, mannwhitneyu, chi2_contingency\n",
+    "from scipy.stats import ttest_ind, pearsonr, chi2_contingency\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "from scipy.stats import f_oneway, mannwhitneyu\n",
     "from skimage.feature import graycomatrix, graycoprops\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
@@ -65,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -717,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -784,6 +794,89 @@
     "    print(\"Гипотеза подтверждена: изображения c картоном имеют больше параллельных линий.\")\n",
     "else:\n",
     "    print(\"Гипотеза не подтверждена: изображения c картоном не имеют значительно больше параллельных линий.\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Гипотеза №5 Металлические поверхности часто имеют высокую отражающую способность. \n",
+    "\n",
+    "- Способы проверки:\n",
+    "    - **t-критерий Стьюдента (t-test):** Сравнение средней отражающей способности на изображениях металла и других классов.\n",
+    "    - **Корреляция Пирсона:** Проверка линейной связи между количеством отражений и принадлежностью к классу \"металл\".\n",
+    "    - **Критерий хи-квадрат:** Проверка отличий доли изображений с высоким уровнем отражений между металлом и другими классами."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "t-test: Statistic = -2.5612454595984153, p-value = 0.010464870898548239\n",
+      "Pearson Correlation: Statistic = 0.005891723334828736, p-value = 0.407558471373331\n",
+      "Chi-square: Statistic = 35.91242941824723, p-value = 2.0638790312840235e-09\n",
+      "Гипотеза не подтверждена: наличие металла не связано с высоким уровнем отражений.\n"
+     ]
+    }
+   ],
+   "source": [
+    "metal_path = os.path.join(path + \"/garbage-dataset\", \"metal\")\n",
+    "other_paths = [os.path.join(path + \"/garbage-dataset\", cls) for cls in classes if cls != \"metal\"]\n",
+    "\n",
+    "def load_images_from_folder(folder):\n",
+    "    images = []\n",
+    "    for filename in os.listdir(folder):\n",
+    "        filepath = os.path.join(folder, filename)\n",
+    "        image = cv2.imread(filepath)\n",
+    "        if image is not None:\n",
+    "            images.append(image)\n",
+    "    return images\n",
+    "\n",
+    "metal_images = load_images_from_folder(metal_path)\n",
+    "metal_reflections = [calculate_reflection(img) for img in metal_images]\n",
+    "\n",
+    "other_reflections = []\n",
+    "for other_path in other_paths:\n",
+    "    other_images = load_images_from_folder(other_path)\n",
+    "    other_reflections.extend([calculate_reflection(img) for img in other_images])\n",
+    "\n",
+    "# 1. t-критерий Стьюдента\n",
+    "t_stat, t_pvalue = ttest_ind(metal_reflections, other_reflections, equal_var=False)\n",
+    "\n",
+    "# 2. Корреляция Пирсона\n",
+    "le = LabelEncoder()\n",
+    "all_reflections = metal_reflections + other_reflections\n",
+    "all_labels = ['metal'] * len(metal_reflections) + ['other'] * len(other_reflections)\n",
+    "numeric_labels = le.fit_transform(all_labels)\n",
+    "\n",
+    "correlation, p_value_corr = pearsonr(all_reflections, numeric_labels)\n",
+    "\n",
+    "# 3. Тест хи-квадрат\n",
+    "reflection_binary = [1 if reflection >= 100 else 0 for reflection in all_reflections]\n",
+    "contingency_table = pd.crosstab(reflection_binary, numeric_labels)\n",
+    "chi2_stat, p_value_chi2, _, _ = chi2_contingency(contingency_table)\n",
+    "\n",
+    "results = {\n",
+    "    \"t-test\": {\"statistic\": t_stat, \"p-value\": t_pvalue},\n",
+    "    \"Pearson Correlation\": {\"statistic\": correlation, \"p-value\": p_value_corr},\n",
+    "    \"Chi-square\": {\"statistic\": chi2_stat, \"p-value\": p_value_chi2},\n",
+    "}\n",
+    "\n",
+    "for test, result in results.items():\n",
+    "    print(f\"{test}: Statistic = {result['statistic']}, p-value = {result['p-value']}\")\n",
+    "\n",
+    "alpha = 0.05\n",
+    "hypothesis_results = {test: result['p-value'] < alpha for test, result in results.items()}\n",
+    "\n",
+    "if all(hypothesis_results.values()):\n",
+    "    print(\"Гипотеза подтверждена: наличие металла связано с высоким уровнем отражений.\")\n",
+    "else:\n",
+    "    print(\"Гипотеза не подтверждена: наличие металла не связано с высоким уровнем отражений.\")\n"
    ]
   }
  ],
