feat: prove 6th hypothesis

--- a/classifier.ipynb
+++ b/classifier.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -49,10 +49,12 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import warnings\n",
+    "import glob\n",
     "\n",
+    "from scipy.stats import mannwhitneyu, spearmanr, kruskal\n",
     "from scipy.stats import ttest_ind, pearsonr, chi2_contingency\n",
     "from sklearn.preprocessing import LabelEncoder\n",
-    "from scipy.stats import f_oneway, mannwhitneyu\n",
+    "from scipy.stats import f_oneway\n",
     "from skimage.feature import graycomatrix, graycoprops\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
@@ -75,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -825,6 +827,7 @@
     }
    ],
    "source": [
+    "\n",
     "metal_path = os.path.join(path + \"/garbage-dataset\", \"metal\")\n",
     "other_paths = [os.path.join(path + \"/garbage-dataset\", cls) for cls in classes if cls != \"metal\"]\n",
     "\n",
@@ -877,6 +880,75 @@
     "    print(\"Гипотеза подтверждена: наличие металла связано с высоким уровнем отражений.\")\n",
     "else:\n",
     "    print(\"Гипотеза не подтверждена: наличие металла не связано с высоким уровнем отражений.\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Гипотеза №6: Изображения с пластиком и стеклом часто имеют больше прозрачных областей.\n",
+    "\n",
+    "- Способы проверки:\n",
+    "    - **Тест Манна-Уитни:** Сравнение распределений количества прозрачных областей на изображениях с пластиком и стеклом против других классов.\n",
+    "    - **Коэффициент корреляции Спирмена:** Оценка монотонной зависимости между количеством прозрачных областей и классом изображения (пластик/стекло против остальных).\n",
+    "    - **Тест Крускала-Уоллиса:** Сравнение медианных значений количества прозрачных областей между группами (пластик, стекло, другие классы)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mann-Whitney U test: U-statistic = 63373648.0, p-value = 2.0179651032763478e-82\n",
+      "Spearman correlation: rho = -0.12222108103161104, p-value = 5.038550422304453e-83\n",
+      "Kruskal-Wallis test: H-statistic = 369.849759985094, p-value = 4.876913498602153e-81\n",
+      "Гипотеза подтверждается: пластик и стекло имеют больше прозрачных областей.\n"
+     ]
+    }
+   ],
+   "source": [
+    "plastic_glass_classes = ['plastic', 'glass']\n",
+    "transparency_data = {'plastic': [], 'glass': [], 'other': []}\n",
+    "\n",
+    "for class_name in classes:\n",
+    "    class_path = os.path.join(path + \"/garbage-dataset/\", class_name)\n",
+    "    image_paths = glob.glob(os.path.join(class_path, \"*.jpg\"))  # Предположим, что файлы изображений имеют расширение .jpg\n",
+    "\n",
+    "    for image_path in image_paths:\n",
+    "        image = cv2.imread(image_path)\n",
+    "        transparency = calculate_transparency(image)\n",
+    "\n",
+    "        if class_name in plastic_glass_classes:\n",
+    "            transparency_data['plastic'].append(transparency)\n",
+    "            transparency_data['glass'].append(transparency)\n",
+    "        else:\n",
+    "            transparency_data['other'].append(transparency)\n",
+    "\n",
+    "# 1. Тест Манна-Уитни (для пластика/стекла против остальных)\n",
+    "u_statistic, p_value_mw = mannwhitneyu(transparency_data['plastic'] + transparency_data['glass'], transparency_data['other'])\n",
+    "print(f\"Mann-Whitney U test: U-statistic = {u_statistic}, p-value = {p_value_mw}\")\n",
+    "\n",
+    "# 2. Коэффициент корреляции Спирмена\n",
+    "all_transparency = transparency_data['plastic'] + transparency_data['glass'] + transparency_data['other']\n",
+    "labels = ['plastic_glass'] * (len(transparency_data['plastic']) + len(transparency_data['glass'])) + ['other'] * len(transparency_data['other'])\n",
+    "\n",
+    "spearman_corr, p_value_spearman = spearmanr(all_transparency, [1 if label == 'plastic_glass' else 0 for label in labels])\n",
+    "print(f\"Spearman correlation: rho = {spearman_corr}, p-value = {p_value_spearman}\")\n",
+    "\n",
+    "# 3. Тест Крускала-Уоллиса\n",
+    "kruskal_stat, p_value_kruskal = kruskal(transparency_data['plastic'], transparency_data['glass'], transparency_data['other'])\n",
+    "print(f\"Kruskal-Wallis test: H-statistic = {kruskal_stat}, p-value = {p_value_kruskal}\")\n",
+    "\n",
+    "# Интерпретация гипотезы\n",
+    "alpha = 0.05\n",
+    "if p_value_mw < alpha and p_value_spearman < alpha and p_value_kruskal < alpha:\n",
+    "    print(\"Гипотеза подтверждается: пластик и стекло имеют больше прозрачных областей.\")\n",
+    "else:\n",
+    "    print(\"Гипотеза не подтверждается: нет статистически значимых различий между классами.\")"
    ]
   }
  ],
