feat: prove 8th hypothesis

--- a/classifier.ipynb
+++ b/classifier.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -50,6 +50,7 @@
     "import pandas as pd\n",
     "import warnings\n",
     "import glob\n",
+    "import scipy.stats as stats\n",
     "\n",
     "from scipy.stats import mannwhitneyu, spearmanr, kruskal\n",
     "from scipy.stats import ttest_ind, pearsonr, chi2_contingency\n",
@@ -1015,11 +1016,84 @@
     "anova_stat, p_value_anova = f_oneway(*all_reflections_per_class)\n",
     "print(f'ANOVA p-value: {p_value_anova}')\n",
     "\n",
-    "# Окончательный вердикт\n",
     "if p_value_mwu < 0.05 and p_value_spearman < 0.05 and p_value_anova < 0.05:\n",
     "    print(\"Гипотеза подтверждена: Металлы имеют значимые отличия в количестве отражений по сравнению с другими материалами.\")\n",
     "else:\n",
     "    print(\"Гипотеза не подтверждена: Нет значимых отличий между металлом и другими материалами.\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Гипотеза №8: Металл и пластик часто имеют яркие участки, особенно под прямым освещением.\n",
+    "\n",
+    "- Способы проверки:\n",
+    "    - **Тест Манна-Уитни**: Сравнение распределений количества ярких пикселей (отражений) на изображениях с металлом и пластиком против других классов (например, стекло, бумага и другие).\n",
+    "    - **Корреляция Пирсона**: Оценка линейной зависимости между количеством ярких пикселей и классом материала (металл и пластик против других). \n",
+    "    - **Тест Левене**: Проверка на равенство дисперсий яркости между изображениями с металлом и пластиком и изображениями с другими материалами. Этот тест позволяет определить, есть ли статистически значимые различия в вариации яркости между двумя группами."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1. Критерий Манна-Уитни между металлом/пластиком и остальными: p-value = 0.24426556591075066\n",
+      "2. Корреляция Пирсона между яркостью и классом: -0.015498280007591004\n",
+      "3. Тест Левене на равенство дисперсий: p-value = 0.0123128462684152\n",
+      "\n",
+      "Гипотеза о том, что металл и пластик имеют яркие участки, не сбылась.\n"
+     ]
+    }
+   ],
+   "source": [
+    "shininess_data = {cls: [] for cls in classes}\n",
+    "\n",
+    "for cls in classes:\n",
+    "    class_path = os.path.join(path + \"/garbage-dataset/\", cls)\n",
+    "    for image_name in os.listdir(class_path):\n",
+    "        if image_name.endswith('.jpg') or image_name.endswith('.png'):\n",
+    "            img_path = os.path.join(class_path, image_name)\n",
+    "            image = cv2.imread(img_path)\n",
+    "            shininess = calculate_shininess(image)\n",
+    "            shininess_data[cls].append(shininess)\n",
+    "\n",
+    "metal_plastic_shininess = np.array(shininess_data['metal'] + shininess_data['plastic'])\n",
+    "other_shininess = []\n",
+    "\n",
+    "for cls in classes:\n",
+    "    if cls not in ['metal', 'plastic']:\n",
+    "        other_shininess.extend(shininess_data[cls])\n",
+    "\n",
+    "other_shininess = np.array(other_shininess)\n",
+    "\n",
+    "# 1. Тест Манна-Уитни (для сравнения среднего между металлом-пластиком и остальными)\n",
+    "u_statistic, p_value_metal_plastic_other = stats.mannwhitneyu(metal_plastic_shininess, other_shininess)\n",
+    "\n",
+    "# 2. Корреляция Пирсона между яркостью и классом (кодируем классы как 1 - металл-пластик, 0 - остальные)\n",
+    "shininess_values = np.concatenate([metal_plastic_shininess, other_shininess])\n",
+    "labels = np.concatenate([np.ones(len(metal_plastic_shininess)), np.zeros(len(other_shininess))])\n",
+    "\n",
+    "# Вычисляем корреляцию между яркостью и классами\n",
+    "correlation, _ = stats.pearsonr(shininess_values, labels)\n",
+    "\n",
+    "# 3. Тест Левене на равенство дисперсий\n",
+    "levene_statistic, p_value_levene = stats.levene(metal_plastic_shininess, other_shininess)\n",
+    "\n",
+    "print(\"1. Критерий Манна-Уитни между металлом/пластиком и остальными: p-value =\", p_value_metal_plastic_other)\n",
+    "print(\"2. Корреляция Пирсона между яркостью и классом:\", correlation)\n",
+    "print(\"3. Тест Левене на равенство дисперсий: p-value =\", p_value_levene)\n",
+    "\n",
+    "# Интерпретация гипотезы\n",
+    "if p_value_metal_plastic_other < 0.05 and correlation > 0.1 and p_value_levene < 0.05:\n",
+    "    print(\"\\nГипотеза о том, что металл и пластик имеют яркие участки, подтвердилась.\")\n",
+    "else:\n",
+    "    print(\"\\nГипотеза о том, что металл и пластик имеют яркие участки, не подтвердилась.\")\n"
    ]
   }
  ],
