feat: prove 9th hypothesis

--- a/classifier.ipynb
+++ b/classifier.ipynb
@@ -1036,7 +1036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1047,7 +1047,7 @@
       "2. Корреляция Пирсона между яркостью и классом: -0.015498280007591004\n",
       "3. Тест Левене на равенство дисперсий: p-value = 0.0123128462684152\n",
       "\n",
-      "Гипотеза о том, что металл и пластик имеют яркие участки, не сбылась.\n"
+      "Гипотеза о том, что металл и пластик имеют яркие участки, не подтвердилась.\n"
      ]
     }
    ],
@@ -1080,7 +1080,7 @@
     "labels = np.concatenate([np.ones(len(metal_plastic_shininess)), np.zeros(len(other_shininess))])\n",
     "\n",
     "# Вычисляем корреляцию между яркостью и классами\n",
-    "correlation, _ = stats.pearsonr(shininess_values, labels)\n",
+    "correlation, p_val_pierson = stats.pearsonr(shininess_values, labels)\n",
     "\n",
     "# 3. Тест Левене на равенство дисперсий\n",
     "levene_statistic, p_value_levene = stats.levene(metal_plastic_shininess, other_shininess)\n",
@@ -1090,10 +1090,85 @@
     "print(\"3. Тест Левене на равенство дисперсий: p-value =\", p_value_levene)\n",
     "\n",
     "# Интерпретация гипотезы\n",
-    "if p_value_metal_plastic_other < 0.05 and correlation > 0.1 and p_value_levene < 0.05:\n",
+    "if p_value_metal_plastic_other < 0.05 and p_val_pierson < 0.05 and p_value_levene < 0.05:\n",
     "    print(\"\\nГипотеза о том, что металл и пластик имеют яркие участки, подтвердилась.\")\n",
     "else:\n",
     "    print(\"\\nГипотеза о том, что металл и пластик имеют яркие участки, не подтвердилась.\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Гипотеза №9: У металла анизотропия текстуры (ориентированность линий) может быть выше из-за шлифовки или полос.\n",
+    "\n",
+    "- Способы проверки:\n",
+    "    - **Тест Манна-Уитни**: Сравнение распределений анизотропии текстуры между изображениями с металлом и изображениями с другими классами (например, стекло, бумага и другие).\n",
+    "    - **Корреляция Спирмена**: Оценка зависимости средней анизотропии текстуры от классов материала.\n",
+    "    - **Тест Краскела-Уоллиса**: Проверка различий в распределении анизотропии текстуры между всеми классами материалов."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Результаты тестов:\n",
+      "1. Тест Манна-Уитни U: p-value = 0.07172223142141215\n",
+      "2. Тест Краскела-Уоллиса: p-value = 0.0\n",
+      "3. Корреляция Спирмена: корреляция = -0.5636363636363636, p-value = 0.08972402831709125\n",
+      "Гипотеза не подтверждена: нет статистически значимых доказательств.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import cv2\n",
+    "import numpy as np\n",
+    "from scipy.stats import mannwhitneyu, kruskal, spearmanr\n",
+    "\n",
+    "classes = ['trash', 'glass', 'battery', 'clothes', 'metal', 'plastic', 'cardboard', 'paper', 'biological', 'shoes']\n",
+    "\n",
+    "anisotropy_data = {}\n",
+    "for class_name in classes:\n",
+    "    class_path = os.path.join(path + \"/garbage-dataset/\", class_name)\n",
+    "    anisotropy_data[class_name] = []\n",
+    "\n",
+    "    for img_file in os.listdir(class_path):\n",
+    "        img_path = os.path.join(class_path, img_file)\n",
+    "        image = cv2.imread(img_path)\n",
+    "        if image is not None:\n",
+    "            anisotropy = calculate_surface_anisotropy(image)\n",
+    "            anisotropy_data[class_name].append(anisotropy)\n",
+    "\n",
+    "metal_anisotropy = anisotropy_data['metal']\n",
+    "non_metal_anisotropy = [value for class_name, values in anisotropy_data.items() if class_name != 'metal' for value in values]\n",
+    "\n",
+    "# 1. Тест Манна-Уитни\n",
+    "mannwhitney_result = mannwhitneyu(metal_anisotropy, non_metal_anisotropy, alternative='greater')\n",
+    "\n",
+    "# 2. Тест Краскела-Уоллиса\n",
+    "kruskal_result = kruskal(metal_anisotropy, *[anisotropy_data[class_name] for class_name in classes if class_name != 'metal'])\n",
+    "\n",
+    "# 3. Корреляция Спирмена между классами\n",
+    "mean_anisotropies = [np.mean(anisotropy_data[class_name]) for class_name in classes]\n",
+    "spearman_corr, spearman_pvalue = spearmanr(range(len(classes)), mean_anisotropies)\n",
+    "\n",
+    "# Вывод результатов\n",
+    "print(\"Результаты тестов:\")\n",
+    "print(f\"1. Тест Манна-Уитни U: p-value = {mannwhitney_result.pvalue}\")\n",
+    "print(f\"2. Тест Краскела-Уоллиса: p-value = {kruskal_result.pvalue}\")\n",
+    "print(f\"3. Корреляция Спирмена: корреляция = {spearman_corr}, p-value = {spearman_pvalue}\")\n",
+    "\n",
+    "# Итог\n",
+    "if mannwhitney_result.pvalue < 0.05 and kruskal_result.pvalue < 0.05 and spearman_pvalue < 0.05:\n",
+    "    print(\"Гипотеза подтверждена: текстурная анизотропия металла выше.\")\n",
+    "else:\n",
+    "    print(\"Гипотеза не подтверждена: нет статистически значимых доказательств.\")\n"
    ]
   }
  ],
