--- a/classifier.ipynb
+++ b/classifier.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -803,6 +803,92 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Гипотеза №4 На изображениях со стеклом и на изображениях с металлом присутствуют цилиндрические формы, окружности.\n",
+    "\n",
+    "- Способы проверки\n",
+    "    - **ANOVA (дисперсионный анализ)**: Проверка наличия значимых различий между группами (стекло, металл и другие классы) по количеству цилиндрических форм.\n",
+    "\n",
+    "    - **Корреляция Спирмена**: Анализ взаимосвязи между классами и количеством цилиндрических форм.\n",
+    "\n",
+    "    - **Критерий хи-квадрат**: Проверка гипотезы о различии частоты цилиндрических форм на изображениях стекла и металла по сравнению с другими классами."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Результаты тестов:\n",
+      "ANOVA: статистика = 20.58609333952457, p-value = 5.975820361191762e-35\n",
+      "Спирмен: корреляция = 0.18124483155277124, p-value = 1.498345430277706e-145\n",
+      "Хи-квадрат: статистика = 368.3859720010561, p-value = 4.203587365037112e-82\n",
+      "Гипотеза подтверждена: цилиндры чаще встречаются на изображениях стекла и металла.\n"
+     ]
+    }
+   ],
+   "source": [
+    "base_path = path + \"/garbage-dataset/\"\n",
+    "\n",
+    "def process_images(class_name):\n",
+    "    class_path = os.path.join(base_path, class_name)\n",
+    "    cylinder_counts = []\n",
+    "\n",
+    "    for filename in os.listdir(class_path):\n",
+    "        image_path = os.path.join(class_path, filename)\n",
+    "        image = cv2.imread(image_path)\n",
+    "        if image is not None:\n",
+    "            cylinder_counts.append(detect_cylinders(image))\n",
+    "\n",
+    "    return cylinder_counts\n",
+    "\n",
+    "cylinder_data = {}\n",
+    "for cls in classes:\n",
+    "    cylinder_data[cls] = process_images(cls)\n",
+    "\n",
+    "# 1. ANOVA для сравнения всех классов\n",
+    "anova_data = [cylinder_data[cls] for cls in classes]\n",
+    "anova_stat, anova_p = f_oneway(*anova_data)\n",
+    "\n",
+    "# 2. Корреляция Спирмена между классами и количеством цилиндров\n",
+    "class_labels = []\n",
+    "cylinder_counts = []\n",
+    "for idx, cls in enumerate(classes):\n",
+    "    class_labels.extend([idx] * len(cylinder_data[cls]))\n",
+    "    cylinder_counts.extend(cylinder_data[cls])\n",
+    "\n",
+    "spearman_corr, spearman_p = spearmanr(class_labels, cylinder_counts)\n",
+    "\n",
+    "# 3. Частота цилиндров в стекле и металле против остальных\n",
+    "glass_metal_counts = cylinder_data['glass'] + cylinder_data['metal']\n",
+    "other_counts = [count for cls in classes if cls not in ['glass', 'metal'] for count in cylinder_data[cls]]\n",
+    "\n",
+    "freq_table = [\n",
+    "    [sum(cylinder_data['glass']) + sum(cylinder_data['metal']), len(glass_metal_counts)],\n",
+    "    [sum(other_counts), len(other_counts)]\n",
+    "]\n",
+    "chi2_stat, chi2_p, _, _ = chi2_contingency(freq_table)\n",
+    "\n",
+    "# Результаты\n",
+    "print(\"Результаты тестов:\")\n",
+    "print(f\"ANOVA: статистика = {anova_stat}, p-value = {anova_p}\")\n",
+    "print(f\"Спирмен: корреляция = {spearman_corr}, p-value = {spearman_p}\")\n",
+    "print(f\"Хи-квадрат: статистика = {chi2_stat}, p-value = {chi2_p}\")\n",
+    "\n",
+    "# Гипотеза\n",
+    "if anova_p < 0.05 and spearman_p < 0.05 and chi2_p < 0.05:\n",
+    "    print(\"Гипотеза подтверждена: цилиндры чаще встречаются на изображениях стекла и металла.\")\n",
+    "else:\n",
+    "    print(\"Гипотеза не подтверждена.\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Гипотеза №5 Металлические поверхности часто имеют высокую отражающую способность. \n",
     "\n",
     "- Способы проверки:\n",
@@ -1169,6 +1255,16 @@
     "    print(\"Гипотеза подтверждена: текстурная анизотропия металла выше.\")\n",
     "else:\n",
     "    print(\"Гипотеза не подтверждена: нет статистически значимых доказательств.\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Гипотеза №10: Металл и стекло имеют более постоянные размеры и пропорции на изображениях. \n",
+    "\n",
+    "- Способы проверки:\n",
+    "    "
    ]
   }
  ],
