--- a/classifier.ipynb
+++ b/classifier.ipynb
@@ -52,10 +52,8 @@
     "import glob\n",
     "import scipy.stats as stats\n",
     "\n",
-    "from scipy.stats import mannwhitneyu, spearmanr, kruskal\n",
-    "from scipy.stats import ttest_ind, pearsonr, chi2_contingency\n",
+    "from scipy.stats import mannwhitneyu, spearmanr, kruskal, levene, ttest_ind, pearsonr, chi2_contingency, f_oneway\n",
     "from sklearn.preprocessing import LabelEncoder\n",
-    "from scipy.stats import f_oneway\n",
     "from skimage.feature import graycomatrix, graycoprops\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
@@ -1264,7 +1262,77 @@
     "### Гипотеза №10: Металл и стекло имеют более постоянные размеры и пропорции на изображениях. \n",
     "\n",
     "- Способы проверки:\n",
-    "    "
+    "    - **Сравнение средних аспектных соотношений** для группы \"металл и стекло\" и всех остальных классов с помощью **критерия Манна-Уитни**.\n",
+    "    - **Сравнение дисперсий аспектных соотношений** для группы \"металл и стекло\" и всех остальных классов с помощью **критерия Левена**.\n",
+    "    - **Проверка корреляции между классом объекта (металл/стекло против других) и аспектным соотношением** с помощью **критерия Спирмена**.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Результаты тестов:\n",
+      "1. Тест Манна-Уитни: p-value = 0.21303798516232975\n",
+      "2. Тест Левена: p-value = 0.05283491837140859\n",
+      "3. Корреляция Спирмена: корреляция = -0.008858382256446987, p-value = 0.21304580872135098\n",
+      "Гипотеза не подтверждена: нет значимых различий в пропорциях.\n"
+     ]
+    }
+   ],
+   "source": [
+    "base_path = path + \"/garbage-dataset/\"\n",
+    "\n",
+    "def get_aspect_ratios(class_name):\n",
+    "    \"\"\"Get aspect ratios for all images in a class.\"\"\"\n",
+    "    class_path = os.path.join(base_path, class_name)\n",
+    "    aspect_ratios = []\n",
+    "\n",
+    "    for image_name in os.listdir(class_path):\n",
+    "        image_path = os.path.join(class_path, image_name)\n",
+    "        ratio = calculate_aspect_ratio(image_path)\n",
+    "        if ratio is not None:\n",
+    "            aspect_ratios.append(ratio)\n",
+    "\n",
+    "    return aspect_ratios\n",
+    "\n",
+    "metal_ratios = get_aspect_ratios('metal')\n",
+    "glass_ratios = get_aspect_ratios('glass')\n",
+    "other_ratios = []\n",
+    "\n",
+    "for cls in classes:\n",
+    "    if cls not in ['metal', 'glass']:\n",
+    "        other_ratios.extend(get_aspect_ratios(cls))\n",
+    "\n",
+    "glass_metal_ratios = metal_ratios + glass_ratios\n",
+    "\n",
+    "# 1. Тест Манна-Уитни\n",
+    "mann_whitney_result = mannwhitneyu(glass_metal_ratios, other_ratios, alternative='two-sided')\n",
+    "\n",
+    "# 2. Тест Левена\n",
+    "levene_result = levene(glass_metal_ratios, other_ratios)\n",
+    "\n",
+    "# 3. Корреляция Спирмена\n",
+    "labels = [1] * len(glass_metal_ratios) + [0] * len(other_ratios)  # 1 для стекла и металла, 0 для остальных\n",
+    "all_ratios = glass_metal_ratios + other_ratios\n",
+    "spearman_result = spearmanr(labels, all_ratios)\n",
+    "\n",
+    "# Вывод результатов\n",
+    "print(\"Результаты тестов:\")\n",
+    "print(f\"1. Тест Манна-Уитни: p-value = {mann_whitney_result.pvalue}\")\n",
+    "print(f\"2. Тест Левена: p-value = {levene_result.pvalue}\")\n",
+    "print(f\"3. Корреляция Спирмена: корреляция = {spearman_result.correlation}, p-value = {spearman_result.pvalue}\")\n",
+    "\n",
+    "# Проверка гипотезы\n",
+    "alpha = 0.05\n",
+    "if (mann_whitney_result.pvalue < alpha) and (levene_result.pvalue < alpha) and (spearman_result.pvalue < alpha):\n",
+    "    print(\"Гипотеза подтверждена: металл и стекло имеют более постоянные размеры и пропорции.\")\n",
+    "else:\n",
+    "    print(\"Гипотеза не подтверждена: нет значимых различий в пропорциях.\")\n"
    ]
   }
  ],
