--- a/classifier.ipynb
+++ b/classifier.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1333,6 +1333,79 @@
     "    print(\"Гипотеза подтверждена: металл и стекло имеют более постоянные размеры и пропорции.\")\n",
     "else:\n",
     "    print(\"Гипотеза не подтверждена: нет значимых различий в пропорциях.\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Гипотеза №11 О наличие бумаги на картинке можно судить по скосу белого цвета.\n",
+    "\n",
+    "- Способы проверки\n",
+    "    - **t-критерий Стьюдента (t-test)**: Сравнение средней доли белого цвета в картинках с бумагой и другими классами.\n",
+    "    - **ANOVA (дисперсионный анализ)**: Проверка, есть ли значимые различия между группами (бумага и другие классы) по количеству белого цвета.\n",
+    "    - **Критерий Манна-Уитни (U-тест)**: Непараметрический тест для сравнения распределений двух групп (в данном случае бумага и другие классы)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "t-test: Statistic = -3.6453611581374994, p-value = 0.00027298340264948675\n",
+      "ANOVA: Statistic = 8.183087235905052, p-value = 0.004232707066685615\n",
+      "Mann-Whitney: Statistic = 15503210.5, p-value = 0.15992819410676817\n",
+      "Гипотеза не подтверждена: наличие бумаги не связано c белым цветом.\n"
+     ]
+    }
+   ],
+   "source": [
+    "paper_path = os.path.join(path + \"/garbage-dataset\", \"paper\")\n",
+    "other_paths = [os.path.join(path + \"/garbage-dataset\", cls) for cls in classes if cls != \"paper\"]\n",
+    "\n",
+    "def load_images_from_folder(folder):\n",
+    "    images = []\n",
+    "    for filename in os.listdir(folder):\n",
+    "        filepath = os.path.join(folder, filename)\n",
+    "        image = cv2.imread(filepath)\n",
+    "        if image is not None: \n",
+    "            images.append(image)\n",
+    "    return images\n",
+    "\n",
+    "paper_images = load_images_from_folder(paper_path)\n",
+    "paper_white_amounts = [calculate_whiteness(img) for img in paper_images]\n",
+    "\n",
+    "other_white_amounts = []\n",
+    "for other_path in other_paths:\n",
+    "    other_images = load_images_from_folder(other_path)\n",
+    "    other_white_amounts.extend([calculate_whiteness(img) for img in other_images])\n",
+    "\n",
+    "# Проверка гипотез\n",
+    "# 1. t-критерий Стьюдента\n",
+    "t_stat, t_pvalue = ttest_ind(paper_white_amounts, other_white_amounts, equal_var=False)\n",
+    "\n",
+    "# 2. ANOVA\n",
+    "anova_stat, anova_pvalue = f_oneway(paper_white_amounts, other_white_amounts)\n",
+    "\n",
+    "results = {\n",
+    "    \"t-test\": {\"statistic\": t_stat, \"p-value\": t_pvalue},\n",
+    "    \"ANOVA\": {\"statistic\": anova_stat, \"p-value\": anova_pvalue},\n",
+    "}\n",
+    "\n",
+    "for test, result in results.items():\n",
+    "    print(f\"{test}: Statistic = {result['statistic']}, p-value = {result['p-value']}\")\n",
+    "\n",
+    "alpha = 0.05\n",
+    "hypothesis_results = {test: result['p-value'] < alpha for test, result in results.items()}\n",
+    "\n",
+    "if all(hypothesis_results.values()):\n",
+    "    print(\"Гипотеза подтверждена: наличие бумаги связано c белым цветом.\")\n",
+    "else:\n",
+    "    print(\"Гипотеза не подтверждена: наличие бумаги не связано c белым цветом.\")"
    ]
   }
  ],
