--- a/classifier.ipynb
+++ b/classifier.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1349,7 +1349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1358,8 +1358,7 @@
      "text": [
       "t-test: Statistic = -3.6453611581374994, p-value = 0.00027298340264948675\n",
       "ANOVA: Statistic = 8.183087235905052, p-value = 0.004232707066685615\n",
-      "Mann-Whitney: Statistic = 15503210.5, p-value = 0.15992819410676817\n",
-      "Гипотеза не подтверждена: наличие бумаги не связано c белым цветом.\n"
+      "Гипотеза подтверждена: наличие бумаги связано c белым цветом.\n"
      ]
     }
    ],
@@ -1406,6 +1405,76 @@
     "    print(\"Гипотеза подтверждена: наличие бумаги связано c белым цветом.\")\n",
     "else:\n",
     "    print(\"Гипотеза не подтверждена: наличие бумаги не связано c белым цветом.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Гипотеза №12 Одежду можно отличить от других классов по наличию волнистых краёв или складок, которые часто встречаются на ткани.\n",
+    "- Способы проверки\n",
+    "    - **t-критерий Стьюдента (t-test)**: Сравнение среднего количества складок в картинках с одеждой и другими классами.\n",
+    "    - **ANOVA (дисперсионный анализ)**: Проверка, есть ли значимые различия между группами (одежда и другие классы) по количеству складок.\n",
+    "    - **Критерий Манна-Уитни (U-тест)**: тест для сравнения распределений двух групп (в данном случае одежда и другие классы)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Гипотеза не подтверждена: различия между классами недостаточно статистически значимы.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import cv2\n",
+    "import numpy as np\n",
+    "from scipy.stats import ttest_ind, f_oneway, mannwhitneyu\n",
+    "\n",
+    "\n",
+    "clothes_path = path + \"/garbage-dataset/clothes\"\n",
+    "other_classes = ['trash', 'glass', 'battery', 'metal', 'plastic', 'cardboard', 'paper', 'biological', 'shoes']\n",
+    "data = {\"clothes\": [], \"others\": []}\n",
+    "\n",
+    "for img_name in os.listdir(clothes_path):\n",
+    "    img_path = os.path.join(clothes_path, img_name)\n",
+    "    img = cv2.imread(img_path)\n",
+    "    if img is not None:\n",
+    "        curvature = calculate_line_curvature(img)\n",
+    "        data[\"clothes\"].append(curvature)\n",
+    "\n",
+    "for cls in other_classes:\n",
+    "    class_path = path + \"/garbage-dataset/\" + cls\n",
+    "    for img_name in os.listdir(class_path):\n",
+    "        img_path = os.path.join(class_path, img_name)\n",
+    "        img = cv2.imread(img_path)\n",
+    "        if img is not None:\n",
+    "            curvature = calculate_line_curvature(img)\n",
+    "            data[\"others\"].append(curvature)\n",
+    "\n",
+    "clothes_curvature = np.array(data[\"clothes\"])\n",
+    "others_curvature = np.array(data[\"others\"])\n",
+    "\n",
+    "# t-тест Стьюдента\n",
+    "t_stat, t_p_value = ttest_ind(clothes_curvature, others_curvature, equal_var=False)\n",
+    "\n",
+    "# ANOVA\n",
+    "a_stat, a_p_value = f_oneway(clothes_curvature, others_curvature)\n",
+    "\n",
+    "# U-тест Манна-Уитни\n",
+    "u_stat, u_p_value = mannwhitneyu(clothes_curvature, others_curvature)\n",
+    "\n",
+    "\n",
+    "if t_p_value < 0.05 and a_p_value < 0.05 and u_p_value < 0.05:\n",
+    "    print(\"Гипотеза подтверждена: одежду можно отличить от других классов по наличию волнистых краёв или складок.\")\n",
+    "else:\n",
+    "    print(\"Гипотеза не подтверждена: различия между классами недостаточно статистически значимы.\")\n"
    ]
   }
  ],
