--- a/classifier.ipynb
+++ b/classifier.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,6 @@
     }
    ],
    "source": [
-    "# Initialize lists to hold features and labels\n",
     "features = []\n",
     "labels = []\n",
     "test_images = []  # List to hold paths of test images\n",
@@ -368,7 +367,6 @@
     "                                     'whiteness', 'line_curvature'])\n",
     "df['label'] = labels\n",
     "\n",
-    "\n",
     "# Split the dataset into training and testing sets\n",
     "X = df[['yellow_amount', 'silver_amount', 'parallel_lines', 'cylinder_count', \n",
     "        'reflection_amount', 'transparency_amount', 'texture_smoothness', \n",
@@ -380,177 +378,61 @@
     "classifier = RandomForestClassifier(n_estimators=100, random_state=42)\n",
     "classifier.fit(X_train, y_train)\n",
     "\n",
-    "# Make predictions on the test set\n",
     "y_pred = classifier.predict(X_test)\n",
     "\n",
-    "# Evaluate the model\n",
     "print(\"Accuracy:\", accuracy_score(y_test, y_pred))\n",
     "print(classification_report(y_test, y_pred))\n",
     "\n",
-    "# Function to classify a new image\n",
-    "def classify_image(image_path):\n",
+    "def classify_image_with_probabilities(image_path):\n",
     "    image = cv2.imread(image_path)\n",
     "    if image is not None:\n",
     "        features_list = get_features(image)\n",
-    "        feature = np.array([features_list])  # Convert to 2D array for prediction\n",
-    "        prediction = classifier.predict(feature)\n",
-    "        return prediction[0]\n",
+    "        feature = np.array([features_list]) \n",
+    "        probabilities = classifier.predict_proba(feature)\n",
+    "        class_probabilities = {class_name: prob for class_name, prob in zip(classifier.classes_, probabilities[0])}\n",
+    "        return class_probabilities\n",
     "    else:\n",
-    "        return None"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Predicted class: glass\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Classifier testing (runs classifier for a specific image)\n",
-    "result = classify_image(path + '/garbage-dataset/metal/metal_2370.jpg') \n",
-    "print(\"Predicted class:\", result)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Predicted class counts for test images containing trash:\n",
-      "Class: trash, Count: 87\n",
-      "Class: clothes, Count: 11\n",
-      "Class: plastic, Count: 12\n",
-      "Class: glass, Count: 45\n",
-      "Class: paper, Count: 4\n",
-      "Class: shoes, Count: 9\n",
-      "Class: metal, Count: 6\n",
-      "Class: battery, Count: 3\n",
-      "Class: cardboard, Count: 10\n",
-      "Class: biological, Count: 3\n",
-      "Predicted class counts for test images containing glass:\n",
-      "Class: glass, Count: 365\n",
-      "Class: metal, Count: 10\n",
-      "Class: trash, Count: 15\n",
-      "Class: plastic, Count: 37\n",
-      "Class: shoes, Count: 54\n",
-      "Class: clothes, Count: 75\n",
-      "Class: biological, Count: 18\n",
-      "Class: cardboard, Count: 8\n",
-      "Class: paper, Count: 14\n",
-      "Class: battery, Count: 17\n",
-      "Predicted class counts for test images containing battery:\n",
-      "Class: shoes, Count: 29\n",
-      "Class: glass, Count: 23\n",
-      "Class: battery, Count: 116\n",
-      "Class: biological, Count: 11\n",
-      "Class: trash, Count: 1\n",
-      "Class: clothes, Count: 4\n",
-      "Class: cardboard, Count: 3\n",
-      "Class: plastic, Count: 1\n",
-      "Class: metal, Count: 1\n",
-      "Predicted class counts for test images containing clothes:\n",
-      "Class: clothes, Count: 1006\n",
-      "Class: paper, Count: 13\n",
-      "Class: plastic, Count: 14\n",
-      "Class: shoes, Count: 7\n",
-      "Class: biological, Count: 7\n",
-      "Class: cardboard, Count: 3\n",
-      "Class: glass, Count: 14\n",
-      "Class: metal, Count: 1\n",
-      "Class: battery, Count: 1\n",
-      "Predicted class counts for test images containing metal:\n",
-      "Class: clothes, Count: 41\n",
-      "Class: shoes, Count: 35\n",
-      "Class: battery, Count: 5\n",
-      "Class: metal, Count: 43\n",
-      "Class: glass, Count: 35\n",
-      "Class: paper, Count: 10\n",
-      "Class: biological, Count: 13\n",
-      "Class: plastic, Count: 12\n",
-      "Class: cardboard, Count: 6\n",
-      "Class: trash, Count: 4\n",
-      "Predicted class counts for test images containing plastic:\n",
-      "Class: plastic, Count: 171\n",
-      "Class: glass, Count: 61\n",
-      "Class: clothes, Count: 89\n",
-      "Class: battery, Count: 2\n",
-      "Class: paper, Count: 17\n",
-      "Class: cardboard, Count: 18\n",
-      "Class: metal, Count: 4\n",
-      "Class: shoes, Count: 15\n",
-      "Class: biological, Count: 7\n",
-      "Class: trash, Count: 13\n",
-      "Predicted class counts for test images containing cardboard:\n",
-      "Class: cardboard, Count: 216\n",
-      "Class: clothes, Count: 57\n",
-      "Class: paper, Count: 13\n",
-      "Class: glass, Count: 22\n",
-      "Class: shoes, Count: 13\n",
-      "Class: plastic, Count: 15\n",
-      "Class: trash, Count: 9\n",
-      "Class: biological, Count: 14\n",
-      "Class: battery, Count: 4\n",
-      "Class: metal, Count: 2\n",
-      "Predicted class counts for test images containing paper:\n",
-      "Class: cardboard, Count: 14\n",
-      "Class: clothes, Count: 58\n",
-      "Class: glass, Count: 33\n",
-      "Class: metal, Count: 5\n",
-      "Class: paper, Count: 183\n",
-      "Class: plastic, Count: 22\n",
-      "Class: shoes, Count: 9\n",
-      "Class: battery, Count: 4\n",
-      "Class: trash, Count: 6\n",
-      "Class: biological, Count: 2\n",
-      "Predicted class counts for test images containing biological:\n",
-      "Class: biological, Count: 136\n",
-      "Class: clothes, Count: 12\n",
-      "Class: glass, Count: 16\n",
-      "Class: shoes, Count: 27\n",
-      "Class: trash, Count: 1\n",
-      "Class: paper, Count: 2\n",
-      "Class: cardboard, Count: 4\n",
-      "Class: plastic, Count: 2\n",
-      "Predicted class counts for test images containing shoes:\n",
-      "Class: glass, Count: 54\n",
-      "Class: shoes, Count: 201\n",
-      "Class: clothes, Count: 73\n",
-      "Class: battery, Count: 11\n",
-      "Class: cardboard, Count: 13\n",
-      "Class: plastic, Count: 8\n",
-      "Class: trash, Count: 3\n",
-      "Class: paper, Count: 6\n",
-      "Class: metal, Count: 3\n",
-      "Class: biological, Count: 24\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Classifier testing (runs classifier for the remaining images)\n",
-    "def test_classify(test_images, target_class_name):\n",
-    "    predictions = defaultdict(int)\n",
-    "    for test_image in test_images:\n",
-    "        if target_class_name in test_image:  \n",
-    "            predicted_class = classify_image(test_image)  \n",
-    "            predictions[predicted_class] += 1 \n",
-    "    return dict(predictions)  \n",
+    "        return None\n",
     "\n",
-    "for class_name in classes:\n",
-    "    results = test_classify(test_images, class_name)\n",
-    "    print(\"Predicted class counts for test images containing \" + class_name + ':')\n",
-    "    for class_name, count in results.items():\n",
-    "        print(f\"Class: {class_name}, Count: {count}\")"
+    "def test_classify_with_probabilities(test_images):\n",
+    "    class_probabilities = defaultdict(list)\n",
+    "    for test_image in test_images:\n",
+    "        probabilities = classify_image_with_probabilities(test_image)\n",
+    "        if probabilities:\n",
+    "            for class_name, prob in probabilities.items():\n",
+    "                class_probabilities[class_name].append(prob)\n",
+    "    aggregated_probabilities = {class_name: np.mean(probs) for class_name, probs in class_probabilities.items()}\n",
+    "    return aggregated_probabilities\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'battery': np.float64(0.0),\n",
+       " 'biological': np.float64(0.0),\n",
+       " 'cardboard': np.float64(0.69),\n",
+       " 'clothes': np.float64(0.13),\n",
+       " 'glass': np.float64(0.05),\n",
+       " 'metal': np.float64(0.0),\n",
+       " 'paper': np.float64(0.02),\n",
+       " 'plastic': np.float64(0.07),\n",
+       " 'shoes': np.float64(0.04),\n",
+       " 'trash': np.float64(0.0)}"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "classify_image_with_probabilities(path + \"/garbage-dataset/cardboard/cardboard_2338.jpg\")\n"
    ]
   },
   {
