feat: dump classifier

--- a/classifier.ipynb
+++ b/classifier.ipynb
@@ -49,6 +49,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import warnings\n",
+    "import joblib\n",
     "import glob\n",
     "import scipy.stats as stats\n",
     "\n",
@@ -336,52 +337,46 @@
    "source": [
     "features = []\n",
     "labels = []\n",
-    "test_images = []  # List to hold paths of test images\n",
+    "test_images = []\n",
     "\n",
-    "# Loop through each class and extract features from images\n",
     "for class_name in classes:\n",
     "    class_path = os.path.join(path + \"/garbage-dataset/\", class_name)\n",
     "    image_names = os.listdir(class_path)\n",
-    "\n",
-    "    # Split the images into training and testing sets (80% train, 20% test)\n",
     "    train_images, test_images_class = train_test_split(image_names, test_size=0.2, random_state=42)\n",
     "\n",
-    "    # Process training images\n",
     "    for image_name in train_images:\n",
     "        image_path = os.path.join(class_path, image_name)\n",
     "        image = cv2.imread(image_path)\n",
-    "\n",
     "        if image is not None:\n",
     "            features_list = get_features(image)\n",
     "            features.append(features_list)\n",
     "            labels.append(class_name)\n",
     "\n",
-    "    # Collect test images for manual testing\n",
     "    for image_name in test_images_class:\n",
     "        test_images.append(os.path.join(class_path, image_name))\n",
     "\n",
-    "# Convert features and labels to a DataFrame\n",
     "df = pd.DataFrame(features, columns=['yellow_amount', 'silver_amount', 'parallel_lines', 'cylinder_count', \n",
     "                                     'reflection_amount', 'transparency_amount', 'texture_smoothness', \n",
     "                                     'shininess', 'surface_anisotropy', 'aspect_ratio', \n",
     "                                     'whiteness', 'line_curvature'])\n",
     "df['label'] = labels\n",
     "\n",
-    "# Split the dataset into training and testing sets\n",
     "X = df[['yellow_amount', 'silver_amount', 'parallel_lines', 'cylinder_count', \n",
     "        'reflection_amount', 'transparency_amount', 'texture_smoothness', \n",
     "        'shininess', 'surface_anisotropy', 'aspect_ratio', 'whiteness','line_curvature']]\n",
     "y = df['label']\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
-    "# Train a Random Forest Classifier\n",
-    "classifier = RandomForestClassifier(n_estimators=100, random_state=42)\n",
+    "classifier = joblib.load('random_forest_classifier.pkl')\n",
+    "\"\"\" classifier = RandomForestClassifier(n_estimators=100, random_state=42)\n",
     "classifier.fit(X_train, y_train)\n",
     "\n",
     "y_pred = classifier.predict(X_test)\n",
     "\n",
     "print(\"Accuracy:\", accuracy_score(y_test, y_pred))\n",
     "print(classification_report(y_test, y_pred))\n",
+    "\n",
+    "joblib.dump(classifier, 'random_forest_classifier.pkl')\n",
     "\n",
     "def classify_image_with_probabilities(image_path):\n",
     "    image = cv2.imread(image_path)\n",
@@ -402,8 +397,7 @@
     "            for class_name, prob in probabilities.items():\n",
     "                class_probabilities[class_name].append(prob)\n",
     "    aggregated_probabilities = {class_name: np.mean(probs) for class_name, probs in class_probabilities.items()}\n",
-    "    return aggregated_probabilities\n",
-    "\n"
+    "    return aggregated_probabilities \"\"\""
    ]
   },
   {
