fix: uncomment classifier related functions

--- a/classifier.ipynb
+++ b/classifier.ipynb
@@ -9,7 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/pasha/image_classification/.venv/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "/home/pasha/dump/image_classification/.venv/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     },
@@ -306,32 +306,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy: 0.6325110689437066\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "     battery       0.67      0.60      0.64       145\n",
-      "  biological       0.57      0.72      0.64       138\n",
-      "   cardboard       0.73      0.60      0.66       311\n",
-      "     clothes       0.72      0.96      0.82       886\n",
-      "       glass       0.51      0.57      0.54       455\n",
-      "       metal       0.42      0.17      0.24       163\n",
-      "       paper       0.63      0.50      0.56       263\n",
-      "     plastic       0.60      0.43      0.50       327\n",
-      "       shoes       0.51      0.45      0.48       317\n",
-      "       trash       0.61      0.47      0.53       157\n",
-      "\n",
-      "    accuracy                           0.63      3162\n",
-      "   macro avg       0.60      0.55      0.56      3162\n",
-      "weighted avg       0.62      0.63      0.61      3162\n",
-      "\n"
-     ]
+     "data": {
+      "text/plain": [
+       "\" classifier = RandomForestClassifier(n_estimators=100, random_state=42)\\nclassifier.fit(X_train, y_train)\\n\\njoblib.dump(classifier, 'random_forest_classifier.pkl')\\n\\n \""
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -370,13 +356,14 @@
     "classifier = joblib.load('random_forest_classifier.pkl')\n",
     "\"\"\" classifier = RandomForestClassifier(n_estimators=100, random_state=42)\n",
     "classifier.fit(X_train, y_train)\n",
+    "joblib.dump(classifier, 'random_forest_classifier.pkl')\"\"\"\n",
     "\n",
     "y_pred = classifier.predict(X_test)\n",
     "\n",
     "print(\"Accuracy:\", accuracy_score(y_test, y_pred))\n",
     "print(classification_report(y_test, y_pred))\n",
     "\n",
-    "joblib.dump(classifier, 'random_forest_classifier.pkl')\n",
+    "\n",
     "\n",
     "def classify_image_with_probabilities(image_path):\n",
     "    image = cv2.imread(image_path)\n",
@@ -397,7 +384,7 @@
     "            for class_name, prob in probabilities.items():\n",
     "                class_probabilities[class_name].append(prob)\n",
     "    aggregated_probabilities = {class_name: np.mean(probs) for class_name, probs in class_probabilities.items()}\n",
-    "    return aggregated_probabilities \"\"\""
+    "    return aggregated_probabilities "
    ]
   },
   {
