--- a/hypotheses_report.ipynb
+++ b/hypotheses_report.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,6 +24,7 @@
     "import kagglehub\n",
     "import cv2\n",
     "import src.image_classification.features as feat\n",
+    "import numpy as np\n",
     "\n",
     "from scipy.stats import mannwhitneyu, spearmanr, kruskal, levene, ttest_ind, pearsonr, chi2_contingency, f_oneway"
    ]
@@ -209,9 +210,105 @@
     "hypothesis_results = {test: result['p-value'] < alpha for test, result in results.items()}\n",
     "\n",
     "if all(hypothesis_results.values()):\n",
-    "    print(\"Гипотеза подтверждена: наличие металла связано c серебряным цветом.\")\n",
+    "    print(\"Итог: гипотеза подтверждена: наличие металла связано c серебряным цветом.\")\n",
     "else:\n",
-    "    print(\"Гипотеза не подтверждена: наличие металла не связано c серебряным цветом.\")"
+    "    print(\"Итог: гипотеза не подтверждена: наличие металла не связано c серебряным цветом.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Гипотеза №3 На картинках с картоном присутствует множество параллельных линий.\n",
+    "\n",
+    "На картинках с картоном присутствует множество параллельных линий, что может быть связано с характерными текстурами и структурой материала. Данная гипотеза предполагает, что изображения с картоном содержат больше параллельных линий по сравнению с изображениями других классов.\n",
+    "\n",
+    "- Способы проверки:\n",
+    "\n",
+    "    - **t-критерий Стьюдента (t-test)**: тот метод позволяет сравнить среднюю долю параллельных линий в картинках с картоном и других классах. Мы рассчитываем t-статистику и p-значение, чтобы определить, есть ли статистически значимые различия между двумя группами.\n",
+    "\n",
+    "    - **ANOVA (дисперсионный анализ)**: Данный подход позволяет проверить, существуют ли значимые различия между несколькими группами (в данном случае между картоном и другими классами) по количеству параллельных линий. ANOVA помогает определить, влияет ли класс изображения на количество параллельных линий.\n",
+    "\n",
+    "    - **Критерий хи-квадрат**: Этот тест позволяет проверить гипотезу о различии долей изображений с высокими количествами параллельных линий между картоном и другими классами. Мы анализируем, сколько изображений из каждой группы попадает в категорию с высоким количеством параллельных линий и сравниваем эти данные."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "t-test: Statistic = -11.379057124078555, p-value = 1.9776123451846287e-29\n",
+      "ANOVA: Statistic = 52.405427227996164, p-value = 4.680228101392663e-13\n",
+      "Chi-square: Statistic = 19.34257889433447, p-value = 1.0924297310604447e-05\n",
+      "Гипотеза подтверждена: изображения c картоном имеют больше параллельных линий.\n"
+     ]
+    }
+   ],
+   "source": [
+    "cardboard_path = os.path.join(path + \"/garbage-dataset\", \"cardboard\")\n",
+    "other_paths = [os.path.join(path + \"/garbage-dataset\", cls) for cls in classes if cls != \"cardboard\"]\n",
+    "\n",
+    "def load_images_from_folder(folder):\n",
+    "    images = []\n",
+    "    for filename in os.listdir(folder):\n",
+    "        filepath = os.path.join(folder, filename)\n",
+    "        image = cv2.imread(filepath)\n",
+    "        if image is not None:\n",
+    "            images.append(image)\n",
+    "    return images\n",
+    "\n",
+    "# Load images\n",
+    "cardboard_images = load_images_from_folder(cardboard_path)\n",
+    "\n",
+    "# Create an instance of the AmountOfParallelLines feature extractor\n",
+    "parallel_lines_feature_extractor = feat.AmountOfParallelLines()\n",
+    "\n",
+    "# Calculate features for cardboard images\n",
+    "cardboard_features = [parallel_lines_feature_extractor(img) for img in cardboard_images]\n",
+    "\n",
+    "other_features = []\n",
+    "for other_path in other_paths:\n",
+    "    other_images = load_images_from_folder(other_path)\n",
+    "    other_features.extend([parallel_lines_feature_extractor(img) for img in other_images])\n",
+    "\n",
+    "# Hypothesis testing\n",
+    "# 1. Student's t-test\n",
+    "t_stat, t_pvalue = ttest_ind(cardboard_features, other_features, equal_var=False)\n",
+    "\n",
+    "# 2. ANOVA\n",
+    "anova_stat, anova_pvalue = f_oneway(cardboard_features, other_features)\n",
+    "\n",
+    "# 3. Chi-square test\n",
+    "threshold = np.percentile(cardboard_features, 75) \n",
+    "cardboard_high = sum(x >= threshold for x in cardboard_features)\n",
+    "cardboard_low = len(cardboard_features) - cardboard_high\n",
+    "other_high = sum(x >= threshold for x in other_features)\n",
+    "other_low = len(other_features) - other_high\n",
+    "chi2_stat, chi2_pvalue, _, _ = chi2_contingency([[cardboard_high, cardboard_low], [other_high, other_low]])\n",
+    "\n",
+    "# Collect results\n",
+    "results = {\n",
+    "    \"t-test\": {\"statistic\": t_stat, \"p-value\": t_pvalue},\n",
+    "    \"ANOVA\": {\"statistic\": anova_stat, \"p-value\": anova_pvalue},\n",
+    "    \"Chi-square\": {\"statistic\": chi2_stat, \"p-value\": chi2_pvalue},\n",
+    "}\n",
+    "\n",
+    "# Print results\n",
+    "for test, result in results.items():\n",
+    "    print(f\"{test}: Statistic = {result['statistic']}, p-value = {result['p-value']}\")\n",
+    "\n",
+    "# Final hypothesis check\n",
+    "alpha = 0.05\n",
+    "hypothesis_results = {test: result['p-value'] < alpha for test, result in results.items()}\n",
+    "\n",
+    "if all(hypothesis_results.values()):\n",
+    "    print(\"Итог: гипотеза подтверждена: изображения c картоном имеют больше параллельных линий.\")\n",
+    "else:\n",
+    "    print(\"Итог: гипотеза не подтверждена: изображения c картоном не имеют значительно больше параллельных линий.\")"
    ]
   }
  ],
